CSS: fix icon vertical align & add avatar border

--- a/styles/Avatar.module.scss
+++ b/styles/Avatar.module.scss
@@ -6,4 +6,6 @@
   width: 100%;
   height: auto;
   border-radius: 50%;
+  border: 1px solid var(--color-avatar-border);
+  box-shadow: 0 0 0 1px var(--color-border);
 }
