--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -3,6 +3,7 @@
   --color-primary-text: #19191c;
   --color-secondary-text: #5c5d5e;
   --color-border: rgba(0, 0, 0, 0.2);
+  --color-avatar-border: #afb5b7;
   --color-link-underline: rgba(0, 0, 0, 0.3);
   --invert-bright-image: invert(1);
 
@@ -31,6 +32,7 @@
   --color-primary-text: white;
   --color-secondary-text: #d9d9d9;
   --color-border: rgba(255, 255, 255, 0.2);
+  --color-avatar-border: var(--color-secondary-text);
   --color-link-underline: rgba(255, 255, 255, 0.3);
   --invert-bright-image: invert(0);
 
